K1J-1525: Migrating junit4 test to junit5 (jupiter) (#264)