@@ -18,27 +18,27 @@
  */
 package se.inera.intyg.intygstjanst.web.integration.v3;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.mockito.AdditionalMatchers.or;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.isNull;
+import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.junit.MockitoJUnitRunner;
+import org.mockito.junit.jupiter.MockitoExtension;
 import se.inera.intyg.common.support.model.CertificateState;
 import se.inera.intyg.common.support.model.StatusKod;
 import se.inera.intyg.common.support.model.common.internal.Utlatande;
@@ -60,8 +60,8 @@ import se.riv.clinicalprocess.healthcond.certificate.types.v3.PersonId;
 import se.riv.clinicalprocess.healthcond.certificate.v3.Intyg;
 import se.riv.clinicalprocess.healthcond.certificate.v3.IntygsStatus;
 
-@RunWith(MockitoJUnitRunner.class)
-public class ListCertificatesForCareResponderImplTest {
+@ExtendWith(MockitoExtension.class)
+class ListCertificatesForCareResponderImplTest {
 
     private static final String FKASSA_RECIPIENT_ID = "FKASSA";
     private static final String OTHER_RECIPIENT_ID = "someotherId";
@@ -85,18 +85,18 @@ public class ListCertificatesForCareResponderImplTest {
     @InjectMocks
     private ListCertificatesForCareResponderInterface responder = new ListCertificatesForCareResponderImpl();
 
-    @Before
-    public void setup() throws ModuleNotFoundException, ModuleException {
+    @BeforeEach
+    void setup() throws ModuleNotFoundException, ModuleException {
 
-        when(moduleRegistry.getModuleApi(or(isNull(), anyString()), or(isNull(), anyString()))).thenReturn(moduleApi);
+        lenient().when(moduleRegistry.getModuleApi(or(isNull(), anyString()), or(isNull(), anyString()))).thenReturn(moduleApi);
 
-        when(moduleApi.getUtlatandeFromXml(or(isNull(), anyString()))).thenReturn(mock(Utlatande.class));
+        lenient().when(moduleApi.getUtlatandeFromXml(or(isNull(), anyString()))).thenReturn(mock(Utlatande.class));
 
-        when(moduleApi.getIntygFromUtlatande(or(isNull(), any(Utlatande.class)))).thenReturn(new Intyg());
+        lenient().when(moduleApi.getIntygFromUtlatande(or(isNull(), any(Utlatande.class)))).thenReturn(new Intyg());
     }
 
     @Test
-    public void listCertificatesWithNoCertificates() throws Exception {
+    void listCertificatesWithNoCertificates() {
         Personnummer civicRegistrationNumber = createPnr("19350108-1234");
         List<String> careUnit = Collections.singletonList("enhet");
         List<Certificate> result = Collections.emptyList();
@@ -114,7 +114,7 @@ public class ListCertificatesForCareResponderImplTest {
     }
 
     @Test
-    public void listCertificates() throws Exception {
+    void listCertificates() {
         Personnummer civicRegistrationNumber = createPnr("19350108-1234");
         List<String> careUnit = Collections.singletonList("enhet");
 
@@ -140,7 +140,7 @@ public class ListCertificatesForCareResponderImplTest {
     }
 
     @Test
-    public void listCertificatesDoesNotListCertificatesDeletedByCaregiver() throws Exception {
+    void listCertificatesDoesNotListCertificatesDeletedByCaregiver() throws Exception {
         Personnummer civicRegistrationNumber = createPnr("19350108-1234");
         List<String> careUnit = Collections.singletonList("enhet");
 
@@ -169,7 +169,7 @@ public class ListCertificatesForCareResponderImplTest {
     }
 
     @Test
-    public void statusesAreFilteredForCare() {
+    void statusesAreFilteredForCare() {
         // Given
         List<String> careUnit = Collections.singletonList("enhet");
         LocalDateTime firstStatusSaved = LocalDateTime.of(2017, 4, 7, 15, 15);
@@ -182,9 +182,6 @@ public class ListCertificatesForCareResponderImplTest {
             firstStatusSaved.plusHours(5),
         };
         Personnummer pnr = createPnr("19121212-1212");
-        List<String> certificateTypes = Collections.singletonList("fk7263");
-        LocalDate fromDate = LocalDate.of(2000, 1, 1);
-        LocalDate toDate = LocalDate.of(2020, 12, 12);
 
         Certificate certificate = new Certificate();
         certificate.setStates(Arrays.asList(
@@ -193,7 +190,7 @@ public class ListCertificatesForCareResponderImplTest {
             new CertificateStateHistoryEntry(OTHER_RECIPIENT_ID, CertificateState.DELETED, timestamps[3]),
             new CertificateStateHistoryEntry(OTHER_RECIPIENT_ID, CertificateState.RESTORED, timestamps[4]),
             new CertificateStateHistoryEntry(OTHER_RECIPIENT_ID, CertificateState.CANCELLED, timestamps[5])));
-        List<Certificate> result = Arrays.asList(certificate);
+        List<Certificate> result = List.of(certificate);
 
         when(certificateService.listCertificatesForCare(pnr, careUnit)).thenReturn(result);
 
@@ -204,23 +201,23 @@ public class ListCertificatesForCareResponderImplTest {
 
         // Then
         assertEquals(1, response.getIntygsLista().getIntyg().size());
-        assertEquals(3, response.getIntygsLista().getIntyg().get(0).getStatus().size());
+        assertEquals(3, response.getIntygsLista().getIntyg().getFirst().getStatus().size());
 
-        IntygsStatus status = response.getIntygsLista().getIntyg().get(0).getStatus().get(0);
+        IntygsStatus status = response.getIntygsLista().getIntyg().getFirst().getStatus().getFirst();
         assertEquals(OTHER_RECIPIENT_ID, status.getPart().getCode());
         assertNotNull(status.getPart().getCodeSystem());
         assertEquals(timestamps[5], status.getTidpunkt());
         assertEquals(StatusKod.CANCEL.name(), status.getStatus().getCode());
         assertNotNull(status.getStatus().getCodeSystem());
 
-        status = response.getIntygsLista().getIntyg().get(0).getStatus().get(1);
+        status = response.getIntygsLista().getIntyg().getFirst().getStatus().get(1);
         assertEquals(OTHER_RECIPIENT_ID, status.getPart().getCode());
         assertNotNull(status.getPart().getCodeSystem());
         assertEquals(timestamps[1], status.getTidpunkt());
         assertEquals(StatusKod.SENTTO.name(), status.getStatus().getCode());
         assertNotNull(status.getStatus().getCodeSystem());
 
-        status = response.getIntygsLista().getIntyg().get(0).getStatus().get(2);
+        status = response.getIntygsLista().getIntyg().getFirst().getStatus().get(2);
         assertEquals(FKASSA_RECIPIENT_ID, status.getPart().getCode());
         assertNotNull(status.getPart().getCodeSystem());
         assertEquals(timestamps[0], status.getTidpunkt());
