@@ -18,20 +18,20 @@
  */
 package se.inera.intyg.intygstjanst.web.integration.vardensintyg;
 
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.when;
 
-import java.util.Arrays;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import java.util.List;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.junit.MockitoJUnitRunner;
+import org.mockito.junit.jupiter.MockitoExtension;
 import se.inera.clinicalprocess.healthcond.certificate.receiver.types.v1.CertificateReceiverTypeType;
 import se.inera.clinicalprocess.healthcond.certificate.types.v3.IntygId;
 import se.inera.intyg.clinicalprocess.healthcond.certificate.listapprovedreceivers.v1.ListApprovedReceiversResponseType;
 import se.inera.intyg.clinicalprocess.healthcond.certificate.listapprovedreceivers.v1.ListApprovedReceiversType;
-import se.inera.intyg.common.support.modules.registry.ModuleNotFoundException;
 import se.inera.intyg.intygstjanst.persistence.model.dao.ApprovedReceiver;
 import se.inera.intyg.intygstjanst.persistence.model.dao.ApprovedReceiverDao;
 import se.inera.intyg.intygstjanst.web.exception.RecipientUnknownException;
@@ -39,8 +39,8 @@ import se.inera.intyg.intygstjanst.web.service.RecipientService;
 import se.inera.intyg.intygstjanst.web.service.bean.CertificateRecipientType;
 import se.inera.intyg.intygstjanst.web.service.bean.Recipient;
 
-@RunWith(MockitoJUnitRunner.class)
-public class ListApprovedReceiversResponderImplTest {
+@ExtendWith(MockitoExtension.class)
+class ListApprovedReceiversResponderImplTest {
 
     private static final String LOGICAL_ADDRESS = "logical-address";
     private static final String INTYG_ID = "intyg-123";
@@ -56,17 +56,17 @@ public class ListApprovedReceiversResponderImplTest {
     private ListApprovedReceiversResponderImpl testee;
 
     @Test
-    public void testListOk() throws RecipientUnknownException, ModuleNotFoundException {
-        when(approvedReceiverDao.getApprovedReceiverIdsForCertificate(INTYG_ID)).thenReturn(Arrays.asList(buildApprovedReceiver("AF")));
+    void testListOk() throws RecipientUnknownException {
+        when(approvedReceiverDao.getApprovedReceiverIdsForCertificate(INTYG_ID)).thenReturn(List.of(buildApprovedReceiver("AF")));
         when(recipientService.getRecipient("AF")).thenReturn(buildRecipient("AF", INTYG_TYP));
 
-        ListApprovedReceiversResponseType resp = testee.listApprovedReceivers(LOGICAL_ADDRESS, buildReq(INTYG_ID, INTYG_TYP));
+        ListApprovedReceiversResponseType resp = testee.listApprovedReceivers(LOGICAL_ADDRESS, buildReq(INTYG_ID));
 
         assertEquals(1, resp.getReceiverList().size());
-        assertEquals("AF", resp.getReceiverList().get(0).getReceiverId());
-        assertEquals("AF-name", resp.getReceiverList().get(0).getReceiverName());
-        assertEquals("HUVUDMOTTAGARE", resp.getReceiverList().get(0).getReceiverType().name());
-        assertEquals(CertificateReceiverTypeType.HUVUDMOTTAGARE, resp.getReceiverList().get(0).getReceiverType());
+        assertEquals("AF", resp.getReceiverList().getFirst().getReceiverId());
+        assertEquals("AF-name", resp.getReceiverList().getFirst().getReceiverName());
+        assertEquals("HUVUDMOTTAGARE", resp.getReceiverList().getFirst().getReceiverType().name());
+        assertEquals(CertificateReceiverTypeType.HUVUDMOTTAGARE, resp.getReceiverList().getFirst().getReceiverType());
     }
 
     private ApprovedReceiver buildApprovedReceiver(String mottagareId) {
@@ -78,14 +78,16 @@ public class ListApprovedReceiversResponderImplTest {
     }
 
     @Test
-    public void testReturnsEmptyWhenUnknownIntygTyp() {
-        ListApprovedReceiversResponseType resp = testee.listApprovedReceivers(LOGICAL_ADDRESS, buildReq(INTYG_ID, "okand-typ"));
+    void testReturnsEmptyWhenUnknownIntygTyp() {
+        ListApprovedReceiversResponseType resp = testee.listApprovedReceivers(LOGICAL_ADDRESS, buildReq(INTYG_ID));
         assertEquals(0, resp.getReceiverList().size());
     }
 
-    @Test(expected = IllegalArgumentException.class)
-    public void testFailsWithNullIntygId() {
-        testee.listApprovedReceivers(LOGICAL_ADDRESS, buildReq(null, INTYG_TYP));
+    @Test
+    void testFailsWithNullIntygId() {
+        final var listApprovedReceiversType = buildReq(null);
+        assertThrows(IllegalArgumentException.class, () ->
+            testee.listApprovedReceivers(LOGICAL_ADDRESS, listApprovedReceiversType));
     }
 
     private Recipient buildRecipient(String recipientId, String certTypes) {
@@ -93,7 +95,7 @@ public class ListApprovedReceiversResponderImplTest {
             true, true);
     }
 
-    private ListApprovedReceiversType buildReq(String intygsId, String intygTyp) {
+    private ListApprovedReceiversType buildReq(String intygsId) {
         ListApprovedReceiversType req = new ListApprovedReceiversType();
         if (intygsId != null) {
             IntygId intygId = new IntygId();
